# pyobs-fli

./: CMakeLists.txt  Dockerfile  README.md  build.py  pyproject.toml  setup.py
.github/workflows/: ruff.yml
docs/source/: conf.py  index.rst
pyobs_fli/: __init__.py  flibase.py  flicamera.py  flidriver.pyx  flifilterwheel.py
pytel_fli/: flicamera.py  flidriver.pyx
